# clion_qt5_test

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mywidget.ui  test1.cpp  test1.h  test1.ui  ui_mywidget.h  ui_test1.h
